fix: :lipstick: update color contrast
update color contrast  in excluded features

--- a/src/components/FeatureList/FeatureList.module.scss
+++ b/src/components/FeatureList/FeatureList.module.scss
@@ -7,12 +7,6 @@
     gap: var(--spacing-xs);
 }
 
-.featureItem {
-    display: flex;
-    align-items: center;
-    font-size: var(--font-size-sm);
-}
-
 .icon {
     display: flex;
     align-items: center;
@@ -24,37 +18,50 @@
     flex-shrink: 0;
 }
 
-.included {
-    .icon {
-        background-color: var(--included-icon-bck);
-        color: var(--included-icon-clr);
+.featureItem {
+    display: flex;
+    align-items: center;
+    font-size: var(--font-size-sm);
 
-        &.highlighted {
-            background-color: var(--included-icon-highlighted-bck);
-            color: var(--included-icon-highlighted-clr);
+    &.included {
+        .icon {
+            background-color: var(--included-icon-bck);
+            color: var(--included-icon-clr);
+
+            &.highlighted {
+                background-color: var(--included-icon-highlighted-bck);
+                color: var(--included-icon-highlighted-clr);
+            }
+        }
+
+        .featureName {
+            color: var(--included-feature-name-clr);
+            line-height: 1.4;
+
+            &.highlighted {
+                color: var(--included-feature-name-highlighted-clr);
+            }
         }
     }
-}
 
-.excluded {
-    opacity: 0.5;
+    &.excluded {
+        .icon {
+            background-color: var(--excluded-icon-bck);
+            color: var(--excluded-icon-clr);
 
-    .icon {
-        background-color: var(--excluded-icon-bck);
-        color: var(--excluded-icon-clr);
-
-        &.highlighted {
-            background-color: var(--excluded-icon-highlighted-bck);
-            color: var(--excluded-icon-highlighted-clr);
+            &.highlighted {
+                background-color: var(--excluded-icon-highlighted-bck);
+                color: var(--excluded-icon-highlighted-clr);
+            }
         }
-    }
-}
 
-.featureName {
-    color: var(--feature-name-clr);
-    line-height: 1.4;
+        .featureName {
+            color: var(--excluded-feature-name-clr);
+            line-height: 1.4;
 
-    &.highlighted {
-        color: var(--feature-name-highlighted-clr);
+            &.highlighted {
+                color: var(--excluded-feature-name-highlighted-clr);
+            }
+        }
     }
 }
